fix eventPromotion title letter-spacing

--- a/css/eventPromotion.css
+++ b/css/eventPromotion.css
@@ -99,7 +99,7 @@
 .title_slide_content .eventPromotion_title {
     font-size: 40px;
     font-family: "noto_dl";
-    letter-spacing: -0.007em;
+    letter-spacing: -0.07em;
     color: #292929;
     text-align: center;
     padding: 74px 0 80px 0;
